# cocotb

./: .azp-private.yml  .backportrc.json  .clang-format  .codecov.yml  .deepsource.toml  .git-blame-ignore-revs  .git_archival.txt  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .lgtm.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.windows  LICENSE  MANIFEST.in  Makefile  README.md  cocotb_build_libs.py  dev-requirements.txt  find_libpython.py  get_latest_released_version  include  index.html  lib  makefiles  noxfile.py  params.json  pip.ini  pyproject.toml  setup.cfg  setup.py  tasks.py  (+2 more)
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  generate-envs.py  generate-tasks.py  issue_template.md  stale.yml
.github/ISSUE_TEMPLATE/: information-wanted.md
.github/problem-matchers/: sphinx.json
.github/workflows/: backport.yml  benchmark.yml  build-release.yml  build-test-dev.yml  build-test-release.yml  cocotb-ci.yml  ecosystem-compat.yml  experimental.yml  extended.yml  fast-api.yml  licensed.yml  lint.yml  pre-commit-autoupdate.yml  pypi-upload.yml  regression-tests.yml  stale.yml
.theia/: launch.json  settings.json
.travis/: Dockerfile.windows  install.sh
cocotb/: ANSI.py  __init__.py  _build_libs.py  _deprecation.py  _gpi_embed.py  _os_compat.py  _py_compat.py  _sim_versions.py  _version.py  amba.py  avalon.py  bfm.py  bfmcmd.py  bfmgen.py  bfms.py  binary.py  bus.py  clean.py  clock.py  config.py  constraint.py  coverage.py  crv.py  crv_unittest.py  decorators.py  env_info.py  exec_context.py  find_libpython.py  handle.py  ipython_support.py  log.py  memdebug.py  opb.py  outcomes.py  path.py  queue.py  regression.py  requirements.py  result.py  run.py  (+11 more)
cocotb/_vendor/: README.md  distutils_version.py
cocotb/drivers/: AvalonMM.py  AvalonST.py  BusDriver.py  SFStreaming.py  __init__.py  ad9361.py  amba.py  avalon.py  opb.py  solarflare.py  wishbone.py  xgmii.py
cocotb/generators/: __init__.py  bit.py  bit_generators.py  byte.py  opra_binary_payload_generators.py  packet.py  packet_generators.py
cocotb/monitors/: __init__.py  amba.py  avalon.py  solarflare.py  wishbone.py  xgmii.py
cocotb/types/: __init__.py  array.py  logic.py  logic_array.py  range.py
docs/: Doxyfile  README.md  requirements.txt
docs/_vendor/: README.md
docs/autodoc2/: autodoc2_docstrings_parser.py
docs/source/: analog_model.rst  build_systems.rst  building.rst  conf.py  contributing.rst  contributors.rst  coroutines.rst  coverage.rst  custom_flows.rst  debugpy.rst  developing.rst  examples.rst  extensions.rst  first_steps.rst  further_resources.rst  glossary.rst  index.rst  install.rst  install_devel.rst  junit.rst  junit_reference.rst  library_reference.rst  library_reference_c.rst  maintaining.rst  matrix_multiplier.rst  mixed_language.rst  mixed_signal.rst  more_examples.rst  platform_support.rst  plugins.rst  profiling.rst  py-modindex.rst  pytest.rst  pytest_plugin.rst  pytest_plugin_reference.rst  quickstart.rst  refcard.rst  regulator.rst  release_notes.rst  rescap.rst  (+14 more)
documentation/: .gitignore  Doxyfile  Makefile  README.md  conda.yml  requirements.txt
documentation/source/: analog_model.rst  best_practices.rst  building.rst  c_symbols.txt  cocotb_entry_point.rst  conf.py  contributors.rst  coroutines.rst  custom_flows.rst  drivers.rst  endian_swapper.rst  examples.rst  extensions.rst  glossary.rst  hal_cosimulation.rst  includeme.rst  index.rst  install.rst  install_after_check.rst  install_cocotb_linux_macos.rst  install_cocotb_windows.rst  install_devel.rst  install_devel_linux_macos.rst  install_devel_windows.rst  install_linux_debian.rst  install_linux_redhat.rst  install_macos.rst  install_pip3_warning.rst  install_prerequisites_common.rst  install_windows.rst  installation.rst  introduction.rst  library_reference.rst  library_reference_c.rst  monitors.rst  overview.rst  ping_tun_tap.rst  platform_support.rst  protocol_extension.rst  py-modindex.rst  (+18 more)
documentation/sphinxext/: cairosvgconverter.py
embed/: Makefile  gpi_embed.c
examples/: Makefile
examples/analog_model/: Makefile  afe.py  digital.sv  test_analog_model.py
examples/axi_lite_slave/: README.md
examples/axi_slave_master/: README.md
examples/clkgen_in_hdl/: Makefile  clkgen.sv  clkgen.vhdl  dut.sv  dut.vhdl  tb.sv  tb.vhdl  test_clkgen.py
examples/comb_seq/: Makefile  issue12.py  issue12.tcl  issue12.v  results.xml
examples/custom_logger/: Makefile  dummy.sv  dummy.vhdl  test_custom_logger.py
examples/demo/: Makefile  counter.v  demo.py  demo.tcl  library.cfg  results.xml
examples/endian_swapper/: .gitignore
examples/first_steps/: Makefile  counter.sv  counter_tests.py
examples/marimo_notebook/: cocotb_marimo.py
examples/mixed_signal/: .gitignore
examples/plusargs/: Makefile  demo.py  plusargs.py  tb_top.v
examples/simple/: Makefile  packet_tap.v  smoketest.py
examples/simple_dff/: .gitignore  Makefile  dff.sv  dff.vhdl  run_cvc.sh  run_ghdl.sh  run_icarus.sh  run_questa_verilog.sh  run_questa_vhdl.sh  run_vcs_verilog.sh  run_verilator.sh  run_xcelium_verilog.sh  run_xcelium_vhdl.sh  test_dff.py
examples/simple_latency/: .gitignore  Makefile  dffs.sv  (+1 more)
gpi/: gpi.h  gpi_logging.c
include/: cocotb_utils.h  embed.h  gpi.h  gpi_logging.h  vhpi_user.h  vpi_user.h
lib/: Makefile
makefiles/: Makefile.aldec  Makefile.doc  Makefile.icarus  Makefile.inc  Makefile.install  Makefile.ius  Makefile.paths  Makefile.pylib  Makefile.pylib.Darwin  Makefile.pylib.Linux  Makefile.pylib.MINGW32_NT-6.1  Makefile.pylib.Msys  Makefile.questa  Makefile.rules  Makefile.sim  Makefile.vcs  parse_vpi.py
profile_bench/: bench_module.sv  bench_signals.py  run_profile.py
pygpi/: entry.py
scripts/: set_env.sh
simulator/: Makefile  simulatormodule.h
src/: pyproject.toml  ruff.toml
tests/: Makefile  benchmark.py  sxs.ps1
tools/: convert_to_fast.py
vpi_shim/: Makefile  gpi_vpi.c
(+1758 files in other folders)
